--- a/styles/_section3.scss
+++ b/styles/_section3.scss
@@ -209,7 +209,6 @@
   .section3 {
     display: flex;
     flex-direction: column;
-    background-color: green;
 
     h3 {
       padding: 60px 0 0px;
@@ -221,7 +220,6 @@
 
     .limit3 {
       @include limit;
-      background-color: red;
       height: 616px;
       display: flex;
       flex-direction: row;
@@ -231,12 +229,13 @@
       display: flex;
       flex-direction: column;
       height: 461px;
-      background-color: violet;
+      width: 400px;
+
       button {
         display: none;
       }
+
       &__containerPrice {
-        background-color: greenyellow;
         top: 0px;
         display: flex;
         flex-direction: column;
@@ -274,40 +273,47 @@
         background-color: aqua;
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
-        width: 150%;
+        // flex-wrap: wrap;
+        width: 250%;
         position: relative;
         left: 0px;
         top: 0;
         padding-top: 18px;
         right: 0px;
-        &__input {
-          width: 10%;
-          display: block;
-          position: absolute;
-          padding-top: 12px;
 
-          &__checkbox {
-            width: 11px;
-            margin: 0px auto 23px;
+        &__pack {
+          background-color: red;
+          display: flex;
+          flex-direction: row;
+
+          &__input {
+            width: 10%;
+            display: flex;
+            clear: absolute;
+
+            &__checkbox {
+              width: 11px;
+              margin: 0px auto 23px;
+            }
           }
-        }
 
-        &__text {
-          display: block;
-          position: absolute;
-          width: 89%;
-          right: 0px;
-          padding-top: 8px;
-          &__title {
-            width: 115px;
-            left: 21px;
-            margin: 0 5px 19px;
-            font-family: $font-secondary;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 19.07px;
-            text-align: initial;
+          &__text {
+            display: block;
+            position: absolute;
+            width: 70%;
+            right: 0px;
+            padding-top: 8px;
+
+            &__title {
+              width: 115px;
+              left: 21px;
+              margin: 0 5px 19px;
+              font-family: $font-secondary;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 19.07px;
+              text-align: initial;
+            }
           }
         }
       }
