--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -5,33 +5,33 @@ header {
   text-align: center;
 
   h1 {
-    width: 162px;
-    font-size: 35px;
+    width: 10.125rem;
+    font-size: 2.1875rem;
     font-weight: 400;
-    line-height: 41.09px;
-    margin: 105px auto 22px auto;
+    line-height: 2.5681rem;
+    margin: 6.5625rem auto 1.375rem auto;
   }
 
   p {
-    width: 285px;
+    width: 17.8125rem;
     font-family: $font-secondary;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
-    line-height: 23px;
-    margin: 0 auto 7px;
+    line-height: 1.4375rem;
+    margin: 0 auto .4375rem;
   }
 
   button {
     box-shadow: 5px 10px 14px 0px #07ace64a;
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 700;
-    margin: 23px auto 54px;
-    padding: 22px 90px;
+    margin: 1.4375rem auto 3.375rem;
+    padding: 1.375rem 5.625rem;
     background-color: $color-primary;
   }
 
   .header__container {
-    margin: 0px auto 0px;
+    margin: 0px auto 0rem;
     display: block;
     overflow: hidden;
     width: 375px;
