--- a/styles/index.css
+++ b/styles/index.css
@@ -85,30 +85,30 @@ header {
   text-align: center;
 }
 header h1 {
-  width: 162px;
-  font-size: 35px;
+  width: 10.125rem;
+  font-size: 2.1875rem;
   font-weight: 400;
-  line-height: 41.09px;
-  margin: 105px auto 22px auto;
+  line-height: 2.5681rem;
+  margin: 6.5625rem auto 1.375rem auto;
 }
 header p {
-  width: 285px;
+  width: 17.8125rem;
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
-  line-height: 23px;
-  margin: 0 auto 7px;
+  line-height: 1.4375rem;
+  margin: 0 auto 0.4375rem;
 }
 header button {
   box-shadow: 5px 10px 14px 0px rgba(7, 172, 230, 0.2901960784);
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 700;
-  margin: 23px auto 54px;
-  padding: 22px 90px;
+  margin: 1.4375rem auto 3.375rem;
+  padding: 1.375rem 5.625rem;
   background-color: #08a6e4;
 }
 header .header__container {
-  margin: 0px auto 0px;
+  margin: 0px auto 0rem;
   display: block;
   overflow: hidden;
   width: 375px;
@@ -295,7 +295,7 @@ header .header__container__img {
   display: block;
   text-align: center;
   background-color: #f7f7f7;
-  padding: 25px 0 230px;
+  padding: 1.5625rem 0 14.375rem;
 }
 .section2__card1 {
   margin: 19px auto 18px;
@@ -313,7 +313,7 @@ header .header__container__img {
 .section2__card1__containerImg1__rectangleMobile {
   position: absolute;
   width: 90.12px;
-  top: 15px;
+  top: 0.9375rem;
 }
 .section2__card1__containerImg1__rectanglePc {
   display: none;
@@ -321,14 +321,14 @@ header .header__container__img {
 .section2__card1__containerImg1__pc {
   position: absolute;
   width: 192.76px;
-  top: 37.11px;
-  left: 55.27px;
+  top: 2.3194rem;
+  left: 3.4544rem;
 }
 .section2__card1__containerImg1__circleBlue {
   position: absolute;
   width: 131.88px;
-  top: 17px;
-  left: 90px;
+  top: 1.0625rem;
+  left: 5.625rem;
 }
 .section2__card1__containerImg1__circleBluePc {
   display: none;
@@ -336,13 +336,13 @@ header .header__container__img {
 .section2__card1__containerImg1__mobile {
   position: absolute;
   width: 160px;
-  top: 25.01px;
-  left: 90px;
+  top: 1.5631rem;
+  left: 5.625rem;
 }
 .section2__card1__containerText1 {
   padding-top: 170px;
   display: block;
-  padding-top: 170px;
+  padding-top: 10.625rem;
   background-color: #fff;
 }
 .section2__card1__containerText1 p {
@@ -355,10 +355,10 @@ header .header__container__img {
   text-align: left;
   font-family: "Raleway", sans-serif;
   width: 90%;
-  margin: 0px 20px 50px;
+  margin: 0rem 1.25rem 3.125rem;
 }
 .section2__card1__containerText1__text {
-  margin: 0px 20px 35px;
+  margin: 0rem 1.25rem 2.1875rem;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-weight: 600;
@@ -372,7 +372,7 @@ header .header__container__img {
   text-align: left;
   font-family: "Raleway", sans-serif;
   width: 90%;
-  margin: 7px 17px 15px;
+  margin: 0.4375rem 1.0625rem 0.9375rem;
 }
 .section2__card1__containerText1__text2 {
   font-family: "Open Sans", sans-serif;
@@ -380,7 +380,7 @@ header .header__container__img {
   font-weight: 600;
   line-height: 21px;
   text-align: left;
-  margin: 0px 16px 17px;
+  margin: 0rem 1rem 1.0625rem;
 }
 .section2__card2row {
   margin: 19px auto 18px;
@@ -388,7 +388,7 @@ header .header__container__img {
   border-radius: 5px;
   display: inline-block;
   background-color: #fff;
-  border: 1px solid #e8e9ed;
+  border: 0.0625rem solid #e8e9ed;
 }
 .section2__card2row__containerImg1 {
   margin: 0 auto;
@@ -398,8 +398,8 @@ header .header__container__img {
 .section2__card2row__containerImg1__circleBlue {
   position: absolute;
   width: 131.88px;
-  top: 17px;
-  left: 90px;
+  top: 1.0625rem;
+  left: 5.625rem;
 }
 .section2__card2row__containerImg1__circleBluePc {
   display: none;
@@ -407,13 +407,13 @@ header .header__container__img {
 .section2__card2row__containerImg1__mobile {
   position: absolute;
   width: 160px;
-  top: 25.01px;
-  left: 90px;
+  top: 1.5631rem;
+  left: 5.625rem;
 }
 .section2__card2row__containerText1 {
   padding-top: 170px;
   display: block;
-  padding-top: 170px;
+  padding-top: 10.625rem;
   background-color: #fff;
 }
 .section2__card2row__containerText1 p {
@@ -426,10 +426,10 @@ header .header__container__img {
   text-align: left;
   font-family: "Raleway", sans-serif;
   width: 90%;
-  margin: 0px 20px 50px;
+  margin: 0rem 1.25rem 3.125rem;
 }
 .section2__card2row__containerText1__text {
-  margin: 0px 20px 35px;
+  margin: 0rem 1.25rem 2.1875rem;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-weight: 600;
@@ -443,7 +443,7 @@ header .header__container__img {
   text-align: left;
   font-family: "Raleway", sans-serif;
   width: 90%;
-  margin: 7px 17px 15px;
+  margin: 0.4375rem 1.0625rem 0.9375rem;
 }
 .section2__card2row__containerText1__text2 {
   font-family: "Open Sans", sans-serif;
@@ -451,7 +451,7 @@ header .header__container__img {
   font-weight: 600;
   line-height: 21px;
   text-align: left;
-  margin: 0px 16px 17px;
+  margin: 0rem 1rem 1.0625rem;
 }
 .section2__card2 {
   margin: 19px auto 18px;
@@ -459,16 +459,16 @@ header .header__container__img {
   border-radius: 5px;
   display: inline-block;
   background-color: #fff;
-  padding: 0px 0 10px;
-  margin: 20px 0 0px;
+  padding: 0rem 0 0.625rem;
+  margin: 1.25rem 0 0rem;
 }
 .section2__card2__containerText2 {
   padding-top: 170px;
   display: block;
-  padding-top: 25px;
+  padding-top: 1.5625rem;
   background-color: #fff;
-  border: 1px solid #e8e9ed;
-  border-radius: 3px;
+  border: 0.0625rem solid #e8e9ed;
+  border-radius: 0.1875rem;
 }
 .section2__card2__containerText2 p {
   width: 90%;
@@ -480,7 +480,7 @@ header .header__container__img {
   text-align: left;
   font-family: "Raleway", sans-serif;
   width: 90%;
-  margin: 5px auto 17px;
+  margin: 0.3125rem auto 1.0625rem;
 }
 .section2__card2__containerText2__text {
   font-family: "Open Sans", sans-serif;
@@ -488,34 +488,34 @@ header .header__container__img {
   font-weight: 600;
   line-height: 21px;
   text-align: left;
-  margin: 20px 20px 25px;
+  margin: 1.25rem 1.25rem 1.5625rem;
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 400;
-  line-height: 21.79px;
+  line-height: 1.3619rem;
 }
 .section2__card2__containerImg2 {
   margin: 0 auto;
   position: relative;
-  border: 1px solid #e8e9ed;
-  border-radius: 5px;
+  border: 0.0625rem solid #e8e9ed;
+  border-radius: 0.3125rem;
   position: relative;
 }
 .section2__card2__containerImg2__backgroundGreen {
-  border-radius: 5px;
-  border: 1px;
+  border-radius: 0.3125rem;
+  border: 0.0625rem;
   position: absolute;
-  padding: 0px;
-  left: 0px;
-  top: -2px;
+  padding: 0rem;
+  left: 0rem;
+  top: -0.125rem;
 }
 .section2__card2__containerImg2__megaphone {
   z-index: 1;
   position: absolute;
-  top: 24px;
-  right: 30px;
+  top: 1.5rem;
+  right: 1.875rem;
   padding: 0;
-  margin: 0px;
+  margin: 0rem;
 }
 
 @media (min-width: 1000px) {
@@ -534,12 +534,11 @@ header .header__container__img {
     min-width: 1000px;
     flex-direction: column;
     justify-content: space-between;
-    padding: 90px 0px;
+    padding: 5.625rem 0rem;
   }
   .section2 .section2__card1 {
     display: flex;
-    width: 1124px;
-    height: 370px;
+    width: 70.25rem;
     flex-direction: row-reverse;
     background-color: #fff;
   }
@@ -553,62 +552,62 @@ header .header__container__img {
     display: block;
     position: absolute;
     width: 40%;
-    top: 60px;
-    left: 280px;
+    top: 3.75rem;
+    left: 17.5rem;
   }
   .section2 .section2__card1__containerImg1__pc {
     flex: 1;
     position: absolute;
     width: 86%;
-    top: 115px;
-    right: 30px;
+    top: 7.1875rem;
+    right: 1.875rem;
   }
   .section2 .section2__card1__containerImg1__mobile {
     z-index: 2;
     width: 93%;
-    top: 25px;
+    top: 1.5625rem;
     left: 5%;
   }
   .section2 .section2__card1__containerImg1__circleBlue {
     position: absolute;
     width: 70%;
-    top: 10px;
-    left: 20px;
+    top: 0.625rem;
+    left: 1.25rem;
   }
   .section2 .section2__card1__containerText1 {
     width: 45%;
-    padding: 8% 1.5%;
+    padding: 80px 40px;
   }
   .section2 .section2__card1__containerText1__title {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 400;
-    line-height: 42px;
+    line-height: 2.625rem;
   }
   .section2 .section2__card1__containerText1__text {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
-    line-height: 22px;
+    line-height: 1.375rem;
     text-align: left;
   }
   .section2 .section2__card1__containerText1__linePink {
     background-color: #eb476e;
-    height: 4px;
+    height: 0.25rem;
     width: 70%;
-    margin: 10% 5% 0px;
+    margin: 10% 5% 0rem;
   }
   .section2 .section2__card1__containerText1__lineBlue {
     background-color: #08a6e4;
-    height: 4px;
+    height: 0.25rem;
     width: 70%;
-    margin: 10% 5% 0px;
+    margin: 10% 5% 0rem;
   }
   .section2 .section2__card2row {
     display: flex;
     flex-wrap: nowrap;
-    width: 1124px;
-    height: 370px;
+    width: 70.25rem;
+    height: 23.125rem;
     background-color: #fff;
-    border: 1px solid #e8e9ed;
+    border: 0.0625rem solid #e8e9ed;
   }
   .section2 .section2__card2row .section2__card2row__containerImg1 {
     width: 50%;
@@ -616,13 +615,13 @@ header .header__container__img {
   .section2 .section2__card2row .section2__card2row__containerImg1 .section2__card2row__containerImg1__circleBlue {
     z-index: 1;
     width: 60%;
-    top: 10px;
-    left: 20px;
+    top: 0.625rem;
+    left: 1.25rem;
   }
   .section2 .section2__card2row .section2__card2row__containerImg1__mobile {
     z-index: 2;
     width: 80%;
-    top: 25px;
+    top: 1.5625rem;
     left: 5%;
   }
   .section2 .section2__card2row__containerText1 {
@@ -631,52 +630,52 @@ header .header__container__img {
   }
   .section2 .section2__card2row__containerText1__lineBlue {
     background-color: #08a6e4;
-    height: 4px;
+    height: 0.25rem;
     width: 70%;
-    margin: 10% 5% 0px;
+    margin: 10% 5% 0rem;
   }
   .section2 .section2__card2 {
     display: flex;
     background-color: transparent;
-    width: 1524px;
-    height: 370px;
+    width: 95.25rem;
+    height: 23.125rem;
   }
   .section2 .section2__card2__containerText2 {
-    width: 620px;
-    height: 370px;
-    margin-left: 200px;
+    width: 38.75rem;
+    height: 23.125rem;
+    margin-left: 12.5rem;
   }
   .section2 .section2__card2__containerText2__title {
-    margin: 0 20px;
+    margin: 0 1.25rem;
     width: 70%;
     text-align: left;
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 400;
-    line-height: 42px;
+    line-height: 2.625rem;
   }
   .section2 .section2__card2__containerText2__text {
     width: 75%;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
-    line-height: 22px;
+    line-height: 1.375rem;
     text-align: left;
   }
   .section2 .section2__card2__containerText2__lineGreen {
     background-color: #55dfb4;
-    height: 4px;
+    height: 0.25rem;
     width: 56%;
-    margin: 10% 4% 0px;
+    margin: 10% 4% 0rem;
   }
   .section2 .section2__card2__containerImg2 {
-    width: 440px;
-    height: 370px;
-    margin-left: 60px;
+    width: 27.5rem;
+    height: 23.125rem;
+    margin-left: 3.75rem;
     position: relative;
   }
   .section2 .section2__card2__containerImg2__backgroundGreen {
     display: absolute;
-    padding: 0px;
-    top: 0px;
+    padding: 0rem;
+    top: 0rem;
     z-index: 1;
     width: 100%;
     height: 100%;
@@ -684,7 +683,7 @@ header .header__container__img {
   .section2 .section2__card2__containerImg2__megaphone {
     position: absolute;
     left: 10%;
-    top: 100px;
+    top: 6.25rem;
     z-index: 2;
   }
 }
@@ -1173,10 +1172,10 @@ body main {
 }
 body footer {
   width: 100%;
-  box-shadow: 0px -5px 40px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0em -0.3125em 2.5em 0.3125em rgba(0, 0, 0, 0.2);
   position: relative;
-  margin: 250px 0px 0px;
-  padding: 10px 0 10px;
+  margin: 250px 0px;
+  padding: 10px 0;
 }
 body footer .pack {
   display: block;
@@ -1184,35 +1183,35 @@ body footer .pack {
 }
 body footer .pack__logoFooter {
   color: #08a6e4;
-  font-size: 26px;
+  font-size: 1.625em;
   font-weight: 300;
-  line-height: 30px;
+  line-height: 1.875em;
   text-align: left;
-  margin: 0px 17px 0px;
-  padding: 10px 7px 0px;
+  margin: 0em 1.0625em 0em;
+  padding: 0.625em 0.4375em 0em;
 }
 body footer .pack__copyright {
-  width: 187px;
-  padding: 0px 0px 10px;
+  width: 11.6875em;
+  padding: 0em 0em 0.625em;
   font-family: "Open Sans", sans-serif;
-  font-size: 11px;
+  font-size: 0.6875rem;
   font-weight: 400;
-  line-height: 14.98px;
-  margin-left: 25px;
+  line-height: 0.9363em;
+  margin-left: 1.5625em;
   color: #a5a5a5;
 }
 body footer .packLogos {
   position: absolute;
-  top: 30px;
-  left: 290px;
+  top: 1.875em;
+  left: 18.125em;
   display: inline-block;
 }
 body footer .packLogos__x {
-  margin-left: -20px;
-  padding: 0 15px;
+  margin-left: -1.25em;
+  padding: 0 0.9375em;
 }
 body footer .packLogos__facebook {
-  padding-right: 20px;
+  padding-right: 1.25em;
 }
 
 @media (min-width: 1000px) {
@@ -1224,7 +1223,7 @@ body footer .packLogos__facebook {
   }
   body footer {
     width: 100%;
-    margin-top: 60px;
+    margin-top: 3.75em;
   }
   body footer .limit {
     display: flex;
@@ -1239,7 +1238,7 @@ body footer .packLogos__facebook {
   body footer .limit .pack {
     display: flex;
     flex-direction: column;
-    margin-left: 85px;
+    margin-left: 5.3125em;
     width: 40%;
   }
   body footer .limit .pack__logoFooter {
@@ -1251,26 +1250,26 @@ body footer .packLogos__facebook {
     margin: 0px 0px 0px;
     padding: 18px 0px 18px 25px;
     text-align: left;
-    padding: 0px 15px;
-    font-size: 26px;
+    padding: 0 0.9375em;
+    font-size: 1.625rem;
     font-weight: 300;
-    line-height: 30px;
+    line-height: 1.875em;
     text-align: left;
   }
   body footer .limit .pack__copyright {
-    margin: 0 18px;
-    font-size: 11px;
+    margin: 0 1.125em;
+    font-size: 0.6875rem;
     font-weight: 400;
-    line-height: 14.98px;
+    line-height: 0.9363em;
     text-align: left;
   }
   body footer .limit .packLogos {
     display: flex;
     top: 0;
-    left: -100px;
+    left: -6.25em;
     position: relative;
-    width: 75px;
+    width: 4.6875em;
     justify-content: space-around;
-    margin-right: 40px;
+    margin-right: 2.5em;
   }
 }
