--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,47 +1,47 @@
 header {
   display: block;
   width: 100%;
-  margin: 0px auto;
+  margin: 0rem auto;
   text-align: center;
 
   h1 {
-    width: 10.125rem;
-    font-size: 2.1875rem;
+    width: 10.125em;
+    font-size: 35px;
     font-weight: 400;
-    line-height: 2.5681rem;
-    margin: 6.5625rem auto 1.375rem auto;
+    line-height: 2.5681em;
+    margin: 6.5625em auto 1.375em auto;
   }
 
   p {
-    width: 17.8125rem;
+    width: 17.8125em;
     font-family: $font-secondary;
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 1.4375rem;
-    margin: 0 auto .4375rem;
+    line-height: 1.4375em;
+    margin: 0 auto .4375em;
   }
 
   button {
-    box-shadow: 5px 10px 14px 0px #07ace64a;
-    font-size: 1em;
+    box-shadow: .3125em .625em .875em 0em #07ace64a;
+    font-size: 16px;
     font-weight: 700;
-    margin: 1.4375rem auto 3.375rem;
-    padding: 1.375rem 5.625rem;
+    margin: 1.4375em auto 3.375em;
+    padding: 1.375em 5.625em;
     background-color: $color-primary;
   }
 
   .header__container {
-    margin: 0px auto 0rem;
+    margin: 0em auto 0em;
     display: block;
     overflow: hidden;
-    width: 375px;
+    width: 23.4375em;
 
     &__img {
       width: 100%;
       height: 267px;
       display: block;
       object-fit: cover;
-      margin: 0px auto;
+      margin: 0rem auto;
     }
   }
 }
@@ -51,28 +51,28 @@ header {
     width: 100%;
 
     h1 {
-      width: 242px;
-      font-size: 49px;
+      width: 15.125em;
+      font-size: 3.0625rem;
       font-weight: 400;
-      line-height: 57px;
+      line-height: 3.5625em;
       text-align: center;
     }
 
     p {
-      width: 400px;
+      width: 25em;
       font-family: Open Sans;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 400;
-      line-height: 22px;
+      line-height: 1.375em;
     }
 
     button {
-      line-height: 22px;
+      line-height: 1.375em;
       text-align: center;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 700;
-      margin: 23px auto 0px;
-      padding: 22px 155px;
+      margin: 1.4375em auto 0em;
+      padding: 1.375em 9.6875em;
     }
 
     .header__container {
@@ -83,7 +83,7 @@ header {
         height: 100%;
         display: block;
         object-fit: cover;
-        margin: 0px auto;
+        margin: 0em auto;
       }
     }
   }
