--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,7 +6,7 @@ header {
 
   h1 {
     width: 10.125em;
-    font-size: 35px;
+    font-size: 2.1875rem;
     font-weight: 400;
     line-height: 2.5681em;
     margin: 6.5625em auto 1.375em auto;
@@ -15,7 +15,7 @@ header {
   p {
     width: 17.8125em;
     font-family: $font-secondary;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.4375em;
     margin: 0 auto .4375em;
@@ -23,7 +23,7 @@ header {
 
   button {
     box-shadow: .3125em .625em .875em 0em #07ace64a;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     margin: 1.4375em auto 3.375em;
     padding: 1.375em 5.625em;
